--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitignore
 *.sublime-project
 *.sublime-workspace
 todo.txt
@@ -6,14 +7,12 @@ reset-files.bash
 *.tar.gz
 
 *.exe
-src/venox
-src/venoxd
-src/venox-cli
-src/venox-tx
-src/test/test_venox
-src/qt/test/test_venox-qt
-src/test/.deps
-*.Po
+src/pivx
+src/pivxd
+src/pivx-cli
+src/pivx-tx
+src/test/test_pivx
+src/qt/test/test_pivx-qt
 
 # autoreconf
 Makefile.in
@@ -39,8 +38,8 @@ confdefs.h
 conftest.cpp
 conftest.err
 libtool
-src/config/venox-config.h
-src/config/venox-config.h.in
+src/config/pivx-config.h
+src/config/pivx-config.h.in
 src/config/stamp-h1
 share/setup.nsi
 share/qt/Info.plist
@@ -66,7 +65,7 @@ src/qt/test/moc*.cpp
 *.o
 *.o-*
 *.patch
-.venox
+.pivx
 *.a
 *.pb.cc
 *.pb.h
@@ -85,12 +84,12 @@ src/qt/test/moc*.cpp
 # Compilation and Qt preprocessor part
 *.qm
 Makefile
-venox-qt
-venox-Qt.app
+pivx-qt
+PIVX-Qt.app
 
 # Unit-tests
 Makefile.test
-venox-qt_test
+pivx-qt_test
 src/test/buildenv.py
 
 # Resources cpp
@@ -106,7 +105,7 @@ build
 #lcov
 *.gcno
 /*.info
-test_venox.coverage/
+test_pivx.coverage/
 total.coverage/
 coverage_percent.txt
 
@@ -125,9 +124,3 @@ qa/pull-tester/test.*/*
 .project
 /doc/doxygen/
 /nbproject/
-
-.idea
-CMakeLists.txt
-cmake-build-debug
-
-.Po
