--- a/contrib/gitian-descriptors/gitian-aarch64.yml
+++ b/contrib/gitian-descriptors/gitian-aarch64.yml
@@ -1,8 +1,8 @@
 ---
-name: "venox-aarch64-1.2"
+name: "pivx-aarch64-3.0"
 enable_cache: true
 suites:
-- "trusty"
+- "xenial"
 architectures:
 - "amd64"
 packages:
@@ -25,7 +25,7 @@ packages:
 - "python"
 reference_datetime: "2015-06-01 00:00:00"
 remotes:
-- "url": "https://github.com/eastcoastcrypto/Venox"
+- "url": "https://github.com/venox-team/venox.git"
   "dir": "venox"
 files: []
 script: |
