--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -1,11 +1,11 @@
 ---
-name: "venox-osx-1.2"
+name: "venox-osx-3.0"
 enable_cache: true
 suites:
 - "trusty"
 architectures:
 - "amd64"
-packages: 
+packages:
 - "ca-certificates"
 - "curl"
 - "g++"
@@ -28,7 +28,7 @@ packages:
 - "python-setuptools"
 - "fonts-tuffy"
 remotes:
-- "url": "https://github.com/eastcoastcrypto/Venox"
+- "url": "https://github.com/venox-team/venox.git"
   "dir": "venox"
 files:
 - "MacOSX10.11.sdk.tar.gz"
