--- a/contrib/gitian-descriptors/gitian-rpi2.yml
+++ b/contrib/gitian-descriptors/gitian-rpi2.yml
@@ -20,7 +20,7 @@ packages:
 - "python"
 reference_datetime: "2015-06-01 00:00:00"
 remotes:
-- "url": "https://github.com/eastcoastcrypto/Venox"
+- "url": "https://github.com/venox-team/venox.git"
   "dir": "venox"
 files:
 - "raspberrypi-tools.tar.gz"
@@ -30,7 +30,7 @@ script: |
   CONFIGFLAGS="--enable-upnp-default --enable-glibc-back-compat"
   FAKETIME_HOST_PROGS=""
   FAKETIME_PROGS="date ar ranlib nm strip"
-  
+
   tar --warning=no-timestamp -xzf raspberrypi-tools.tar.gz
   export TOOLCHAIN_BIN=$(pwd)/raspberrypi-tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin
   export PATH=$PATH:$TOOLCHAIN_BIN
